Updated deploy settings

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,9 +1,15 @@
-[uwsgi]
-socket=127.0.0.1:8000
-chdir=/var/django/dev/uranusjr.com
-module=__.wsgi:application
-master=True
-pidfile=/tmp/uranusjr.com.pid
-vacuum=True
-max-requests=5000
-daemonize=/var/log/uwsgi/uranusjr.com.log
+socket        = 127.0.0.1:8000
+chdir        = /var/django/dev/uranusjr.com
+module       = __.wsgi:application
+master       = True
+pidfile      = /tmp/uranusjr.com.pid
+vacuum       = True
+max-requests = 5000
+daemonize    = /var/log/uwsgi/uranusjr.com.log
+env          = DJANGO_SETTINGS_MODULE=__.settings.deploy
+env          = DB_DEFAULT_NAME=uranusjr
+env          = DB_DEFAULT_LOGIN=uranusjr
+env          = DB_DEFAULT_HOST=
+env          = DB_DEFAULT_PORT=
+env          = STATIC_ROOT=/usr/share/nginx/www/uranusjr.com/static/
+env          = MEDIA_ROOT=/usr/share/nginx/www/uranusjr.com/media/
